# TPO-embedserv-wrapper

./: .gitignore  LICENSE  README.md  ai_instruct.md  pyproject.toml
embedserv-wrapper/: embedserv.py
embedserv_wrapper/: __init__.py  embedserv.py
