[project]
name = "embedserv-wrapper"
version = "1.0.0"
description = "A wrapper for TPO-embedserv"
readme = "README.md"
license = { file = "LICENSE" }
[project.urls]
"Homepage" = "https://github.com/TPO-Code/TPO-embedserve-wrapper"
"Bug Tracker" = "https://github.com/TPO-Code/TPO-embedserve-wrapper/issues"
requires-python = ">=3.10"
dependencies = ["requests"]
