[project]
name = "embedserv-wrapper"
version = "1.0.0"
description = "A wrapper for TPO-embedserv"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/TPO-Code/TPO-embedserv-wrapper"
"Bug Tracker" = "https://github.com/TPO-Code/TPO-embedserv-wrapper/issues"
